--- a/enigme.html
+++ b/enigme.html
@@ -11,20 +11,24 @@
     <header>
       <nav>
         <picture>
-          <a href="./images/Illustrations+Logo/All-pages/icon_SAYNA.png">
+          <a href="./index.html">
             <img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
               alt="logo de sayna"
             />
           </a>
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_x.png"
-            alt="x icon"
-          />
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-            alt="logo de marvel"
-          />
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_x.png"
+              alt="x icon"
+            />
+          </a>
+          <a href="./index.html">
+            <img
+              src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
+              alt="logo de marvel"
+            />
+          </a>
         </picture>
         <ul>
           <li><a href="./index.html">ACCUEIL</a></li>
