--- a/index.html
+++ b/index.html
@@ -10,26 +10,20 @@
   <body>
     <header>
       <nav>
-        <picture>
-          <a href="./index.html">
-            <img
+        <picture
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-              alt="logo de sayna"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="logo de sayna" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_x.png"
-              alt="x icon"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="x icon" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-              alt="logo de marvel"
-            />
-          </a>
-        </picture>
+              alt="logo de marvel" /></a
+        ></picture>
         <ul>
           <li><a href="./index.html">ACCUEIL</a></li>
           <li><a href="./wakanda.html">WAKANDA</a></li>
@@ -39,24 +33,18 @@
       <picture class="social-media-fixed"
         ><img
           src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-          alt="link to contact from facebook account"
-        />
-        <img
+          alt="link to contact from facebook account" /><img
           src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-          alt="link to contact from instagram account"
-        />
-        <img
+          alt="link to contact from instagram account" /><img
           src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-          alt="link to contact from twitter account"
-        /><img
+          alt="link to contact from twitter account" /><img
           src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
           alt="link to contact from tikrok account "
-        />
-      </picture>
+      /></picture>
     </header>
     <main>
       <section class="hero">
-        <div>
+        <div class="hero-text">
           <h1>BLACK PANTHER</h1>
           <h2>WAKANDA FOREVER</h2>
           <p>
@@ -67,10 +55,12 @@
             et c'est
           </p>
         </div>
-        <img
-          src="./images/Illustrations+Logo/Accueil/Pantherhome1.png"
-          alt="pictures of black panther and his human form"
-        />
+        <div class="hero-actor">
+          <img
+            src="./images/Illustrations+Logo/Accueil/Pantherhome1.png"
+            alt=""
+          />
+        </div>
       </section>
       <div class="content-principal boxes">
         <section class="personage-wakanda">
@@ -231,28 +221,29 @@
           </section>
         </article>
         <aside>
-          <div>
+          <div class="card">
             <img
+              class="tchalla-actor"
               src="./images/Illustrations+Logo/Accueil/Tchalla.png"
               alt="picture of black panther human form in wakanda"
             />
-            <div>
-              <h3>T'Challa</h3>
+            <div class="card-tchalla">
+              <h3 style="text-align: center">T'Challa</h3>
               <div>
-                <span class="tchalla-description">Black Panther</span>
-                <span class="tchalla-description">Roi du Wakanda</span>
-                <span class="tchalla-description">En vie</span>
+                <span class="tchalla-description">Black Panther</span
+                ><span class="tchalla-description">Roi du Wakanda</span
+                ><span class="tchalla-description">En vie</span>
               </div>
               <div>
-                <p>Acteur:<span> Chadwick Boseman</span></p>
-                <p>Apparition<span> Captain America Civil War (2016)</span></p>
-                <p>Espèce:<span> humain</span></p>
-                <p>Nationalité:<span> Wakandais</span></p>
-                <p>Sexe:<span> Homme</span></p>
+                <p>Acteur:<span>Chadwick Boseman</span></p>
+                <p>Apparition<span>Captain America Civil War (2016)</span></p>
+                <p>Espèce:<span>humain</span></p>
+                <p>Nationalité:<span>Wakandais</span></p>
+                <p>Sexe:<span>Homme</span></p>
                 <p>
                   Decès:
                   <span
-                    >31 mai 2018 (victime du Snap ; ressuscité par Hulk <br />
+                    >31 mai 2018 (victime du Snap; ressuscité par Hulk <br />
                     en 2023) (2016)
                   </span>
                 </p>
@@ -281,26 +272,20 @@
     </main>
     <footer>
       <div class="foot">
-        <picture class="logo-sayna">
-          <a href="./index.html">
-            <img
+        <picture class="logo-sayna"
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-              alt="logo de sayna"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="logo de sayna" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_x.png"
-              alt="x icon"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="x icon" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-              alt="logo de marvel"
-            />
-          </a>
-        </picture>
+              alt="logo de marvel" /></a
+        ></picture>
         <div class="pages">
           <h3>PAGES</h3>
           <ul>
@@ -310,47 +295,35 @@
         </div>
         <div id="social-media-ft">
           <h3>Retrouvez nous</h3>
-          <picture class="social-media-footer">
-            <a
+          <picture class="social-media-footer"
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
               rel="noopener noreferrer"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-                alt="lien de connexion a facebook icon"
-              />
-            </a>
-            <a
+                alt="lien de connexion a facebook icon" /></a
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-                alt="link to contact from instagram account"
-              />
-            </a>
-            <a
+                alt="link to contact from instagram account" /></a
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
               rel="noopener noreferrer"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-                alt="link to contact from twitter account"
-              />
-            </a>
-            <a
+                alt="link to contact from twitter account" /></a
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
               rel="noopener noreferrer"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-                alt="link to contact from tikrok account "
-              />
-            </a>
-          </picture>
+                alt="link to contact from tikrok account " /></a
+          ></picture>
         </div>
         <p>
           2022 Tous droits réservés Politique de confidentialité Conditions
