changement des formulaires

--- a/index.html
+++ b/index.html
@@ -30,17 +30,48 @@
           <li><a href="./enigme.html">ENIGME</a></li>
         </ul>
       </nav>
-      <picture class="social-media-fixed"
-        ><img
-          src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-          alt="link to contact from facebook account" /><img
-          src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-          alt="link to contact from instagram account" /><img
-          src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-          alt="link to contact from twitter account" /><img
-          src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-          alt="link to contact from tikrok account "
-      /></picture>
+      <picture class="social-media-fixed">
+        <a
+          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+            alt="link to contact from facebook account"
+          />
+        </a>
+        <a
+          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+            alt="link to contact from instagram account"
+          />
+        </a>
+        <a
+          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+            alt="link to contact from twitter account"
+          />
+        </a>
+        <a
+          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+            alt="link to contact from tikrok account "
+          />
+        </a>
+      </picture>
     </header>
     <main>
       <section class="hero">
@@ -266,7 +297,7 @@
             id="Email"
             placeholder="Email"
           /><br /><textarea id="message" cols="30" rows="10">Message </textarea
-          ><br /><input type="submit" value="Envoyer" /><br />
+          ><br /><input type="submit" value="Envoyer" class="submit" /><br />
         </form>
       </div>
     </main>
