--- a/index.html
+++ b/index.html
@@ -292,11 +292,13 @@
         <form action="">
           <p>Besoin de l'intervention du wakanda ?</p>
           <h2>Contactez nous</h2>
-          <input type="text" id="nom" placeholder="Nom" /><br /><input
-            type="email"
-            id="Email"
-            placeholder="Email"
-          /><br /><textarea id="message" cols="30" rows="10">Message </textarea
+          <input type="text" id="nom" value="Nom" /><br />
+          <input type="email" id="Email" value="Email" /><br /><textarea
+            id="message"
+            cols="30"
+            rows="10"
+          >
+Message </textarea
           ><br /><input type="submit" value="Envoyer" class="submit" /><br />
         </form>
       </div>
