--- a/enigme.html
+++ b/enigme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <picture>
+        <picture class="logo">
           <a href="./index.html">
             <img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
@@ -31,9 +31,9 @@
           </a>
         </picture>
         <ul>
-          <li><a href="./index.html">ACCUEIL</a></li>
-          <li><a href="./wakanda.html">WAKANDA</a></li>
-          <li><a href="./enigme.html">ENIGME</a></li>
+          <li class="link-ankre"><a href="./index.html">ACCUEIL</a></li>
+          <li class="link-ankre"><a href="./wakanda.html">WAKANDA</a></li>
+          <li class="link-ankre"><a href="./enigme.html">ENIGME</a></li>
         </ul>
       </nav>
     </header>
@@ -59,21 +59,53 @@
         </div>
       </section>
       <section class="boxes">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-          voluptatum possimus obcaecati provident, quisquam, temporibus libero
-          autem nulla dicta maxime atque dolores sunt, cumque labore nam error
-          corrupti asperiores magnam.
-        </p>
+        <h2 class="question">
+          "SI JE SUIS FIDELE C’EST A CE TRONE PEU IMPORTE QUI MONTE DESSUS"
+        </h2>
         <div class="quiz">
           <div>
             <form action="">
-              <p>Voici la transicription de l’alphabet :</p>
-              <p></p>
-              <label for="reponse">Alors as tu la réponse</label><br /><input
-                type="text"
-                placeholder="Réponse"
-              /><input type="submit" value="Envoyer" />
+              <div>
+                <p>Voici la transicription de l’alphabet :</p>
+                <p>
+                  A=<span class="letter">A </span>; B=<span class="letter"
+                    >B </span
+                  >; C=<span class="letter">C</span>; D=<span class="letter"
+                    >D</span
+                  >; E=<span class="letter">E</span>; F=<span class="letter"
+                    >F</span
+                  >; G=<span class="letter">G</span>; H=<span class="letter"
+                    >H</span
+                  >; I=<span class="letter">I </span>; J=<span class="letter"
+                    >J</span
+                  >; K=<span class="letter">K</span>; L=<span class="letter"
+                    >L </span
+                  >; M=<span class="letter">M </span>; N=<span class="letter"
+                    >N </span
+                  >; O=<span class="letter">O </span>; P=<span class="letter"
+                    >P </span
+                  >; Q=<span class="letter">Q </span>; R=<span class="letter"
+                    >R</span
+                  >; S=<span class="letter">S</span>; T=<span class="letter"
+                    >T</span
+                  >; U=<span class="letter">U</span>; V=<span class="letter"
+                    >V</span
+                  >; W=<span class="letter">W</span>; X=<span class="letter"
+                    >X</span
+                  >; Y=<span class="letter">Y </span>; Z=<span class="letter"
+                    >Z </span
+                  >;
+                </p>
+              </div>
+              <div class="confirm-rp">
+                <label for="reponse">Alors as tu la réponse</label><br />
+                <input
+                  type="text"
+                  style="border-color: #df99f2"
+                  placeholder="Réponse"
+                />
+              </div>
+              <input type="submit" value="Envoyer" />
             </form>
           </div>
           <div class="doYouKnow">
@@ -90,26 +122,20 @@
     </main>
     <footer>
       <div class="foot">
-        <picture class="logo-sayna">
-          <a href="./index.html">
-            <img
+        <picture class="logo-sayna"
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-              alt="logo de sayna"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="logo de sayna" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_x.png"
-              alt="x icon"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="x icon" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-              alt="logo de marvel"
-            />
-          </a>
-        </picture>
+              alt="logo de marvel" /></a
+        ></picture>
         <div class="pages">
           <h3>PAGES</h3>
           <ul>
@@ -117,24 +143,42 @@
             <li>Wakanda</li>
           </ul>
         </div>
-        <div class="social-media-ft">
+        <div id="social-media-ft">
           <h3>Retrouvez nous</h3>
           <picture class="social-media-footer"
-            ><img
-              src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-              alt="link to contact from facebook account" /><img
-              src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-              alt="link to contact from instagram account" /><img
-              src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-              alt="link to contact from twitter account" /><img
-              src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-              alt="link to contact from tiktok account "
-          /></picture>
-          <p>
-            2022 Tous droits réservés Politique de confidentialité Conditions
-            d’utilisation
-          </p>
+            ><a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
+                alt="lien de connexion a facebook icon" /></a
+            ><a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+              ><img
+                src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
+                alt="link to contact from instagram account" /></a
+            ><a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
+                alt="link to contact from twitter account" /></a
+            ><a
+              href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
+                alt="link to contact from tikrok account " /></a
+          ></picture>
         </div>
+        <p>
+          2022 Tous droits réservés Politique de confidentialité Conditions
+          d’utilisation
+        </p>
       </div>
     </footer>
   </body>
