--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,24 +10,30 @@
   <body>
     <header>
       <nav>
-        <picture
-          ><a href="./index.html"
-            ><img
+        <picture class="logo">
+          <a href="./index.html">
+            <img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-              alt="logo de sayna" /></a
-          ><a href="./index.html"
-            ><img
+              alt="logo de sayna"
+            />
+          </a>
+          <a href="./index.html">
+            <img
               src="./images/Illustrations+Logo/All-pages/icon_x.png"
-              alt="x icon" /></a
-          ><a href="./index.html"
-            ><img
+              alt="x icon"
+            />
+          </a>
+          <a href="./index.html">
+            <img
               src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-              alt="logo de marvel" /></a
-        ></picture>
+              alt="logo de marvel"
+            />
+          </a>
+        </picture>
         <ul>
-          <li><a href="./index.html">ACCUEIL</a></li>
-          <li><a href="./wakanda.html">WAKANDA</a></li>
-          <li><a href="./enigme.html">ENIGME</a></li>
+          <li class="link-ankre"><a href="./index.html">ACCUEIL</a></li>
+          <li class="link-ankre"><a href="./wakanda.html">WAKANDA</a></li>
+          <li class="link-ankre"><a href="./enigme.html">ENIGME</a></li>
         </ul>
       </nav>
       <picture class="social-media-fixed">
