--- a/wakanda.html
+++ b/wakanda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <picture>
+        <picture class="logo">
           <a href="./index.html">
             <img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
@@ -31,58 +31,17 @@
           </a>
         </picture>
         <ul>
-          <li><a href="./index.html">ACCUEIL</a></li>
-          <li><a href="./wakanda.html">WAKANDA</a></li>
-          <li><a href="./enigme.html">ENIGME</a></li>
+          <li class="link-ankre"><a href="./index.html">ACCUEIL</a></li>
+          <li class="link-ankre"><a href="./wakanda.html">WAKANDA</a></li>
+          <li class="link-ankre"><a href="./enigme.html">ENIGME</a></li>
         </ul>
       </nav>
-      <picture class="social-media-fixed">
-        <a
-          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-            alt="lien de connexion a facebook icon"
-          />
-        </a>
-        <a
-          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
-          target="_blank"
-        >
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-            alt="link to contact from instagram account"
-          />
-        </a>
-        <a
-          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-            alt="link to contact from twitter account"
-          />
-        </a>
-        <a
-          href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-            alt="link to contact from tikrok account "
-          />
-        </a>
-      </picture>
     </header>
     <main>
       <section class="hero hero-wakanda">
         <div class="hero-text">
           <h1>WAKANDA FOREVER</h1>
-          <h2></h2>
+          <h2 class="letter">WAKANDA FOREVER</h2>
           <p>
             Situé en Afrique subsaharienne, à l'ouest de l’Éthiopie et au nord
             du Kenya1, ce petit royaume, longtemps caché aux autres nations du
@@ -317,26 +276,20 @@
     </main>
     <footer>
       <div class="foot">
-        <picture class="logo-sayna">
-          <a href="./index.html">
-            <img
+        <picture class="logo-sayna"
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_SAYNA.png"
-              alt="logo de sayna"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="logo de sayna" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_x.png"
-              alt="x icon"
-            />
-          </a>
-          <a href="./index.html">
-            <img
+              alt="x icon" /></a
+          ><a href="./index.html"
+            ><img
               src="./images/Illustrations+Logo/All-pages/icon_MARVEL.png"
-              alt="logo de marvel"
-            />
-          </a>
-        </picture>
+              alt="logo de marvel" /></a
+        ></picture>
         <div class="pages">
           <h3>PAGES</h3>
           <ul>
@@ -344,54 +297,42 @@
             <li>Wakanda</li>
           </ul>
         </div>
-        <div class="social-media-ft">
+        <div id="social-media-ft">
           <h3>Retrouvez nous</h3>
-          <picture class="social-media-footer">
-            <a
+          <picture class="social-media-footer"
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
               rel="noopener noreferrer"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_facebook.png"
-                alt="lien de connexion a facebook icon"
-              />
-            </a>
-            <a
+                alt="lien de connexion a facebook icon" /></a
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_instagram.png"
-                alt="link to contact from instagram account"
-              />
-            </a>
-            <a
+                alt="link to contact from instagram account" /></a
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
               rel="noopener noreferrer"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_twitter.png"
-                alt="link to contact from twitter account"
-              />
-            </a>
-            <a
+                alt="link to contact from twitter account" /></a
+            ><a
               href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"
               target="_blank"
               rel="noopener noreferrer"
-            >
-              <img
+              ><img
                 src="./images/Illustrations+Logo/All-pages/icon_tiktok.png"
-                alt="link to contact from tikrok account "
-              />
-            </a>
-          </picture>
-          <p>
-            2022 Tous droits réservés Politique de confidentialité Conditions
-            d’utilisation
-          </p>
+                alt="link to contact from tikrok account " /></a
+          ></picture>
         </div>
+        <p>
+          2022 Tous droits réservés Politique de confidentialité Conditions
+          d’utilisation
+        </p>
       </div>
     </footer>
   </body>
